--- a/classes/NegotiationProcess.cls
+++ b/classes/NegotiationProcess.cls
@@ -1,45 +1,39 @@
-/**
- * Created by JJ93 on 11.09.2020.
- */
-
 public class NegotiationProcess {
     @InvocableMethod(Label='New Task to new Account')
     public static void newTaskToNewAccount(List<AccountToTask> accounts) {
+
+        List<Task> tasksToCreate = new List<Task>();
+        List<Task> tasksToReassign = new List<Task>();
+        List<Task> allTasks = [SELECT Id FROM Task];
+
+
         for (AccountToTask accountToTask : accounts) {
-            if (isTaskCountLessThanThree(accountToTask)) {
-                insert generateNewTask(accountToTask);// DML in LOOP !!!!
+            List<Task> tasksToCheck = new List<Task>();
+            for (Task task : allTasks) {
+                if (task.WhatId == accountToTask.accountId) {
+                    tasksToCheck.add(task);
+                }
+            }
+            if (tasksToCheck.size() >= 3) {
+                for (Task task : tasksToCheck) {
+                    task.OwnerId = getRandomUserId();
+                }
+                tasksToReassign.addAll(tasksToCheck);
+
             } else {
-                reassignTasks(accountToTask, getRandomUserId());
+                tasksToCreate.add(generateNewTask(accountToTask));
             }
 
         }
+        insert tasksToCreate;
+        update tasksToReassign;
     }
-
     private static Id getRandomUserId() {
         List<User> activeUsers = [SELECT Id FROM User WHERE IsActive = TRUE];
-        Integer randomUserIndex = Math.round(Math.random()*(activeUsers.size()-1));
+        Integer randomUserIndex = Math.round(Math.random() * (activeUsers.size() - 1));
         return activeUsers[randomUserIndex].Id;
     }
 
-    private static void reassignTasks(AccountToTask accountToTask, Id newOwnerId) {
-        Id accountId = accountToTask.accountId;
-        List<Task> tasksToReassign = [SELECT Id FROM Task WHERE WhatId = :accountId];
-        for (Task task : tasksToReassign) {
-            task.OwnerId = newOwnerId;
-        }
-        update tasksToReassign;
-
-    }
-
-    private static Boolean isTaskCountLessThanThree(AccountToTask accountToTask) {
-        Id accountId = accountToTask.accountId;
-        if ([SELECT COUNT() FROM Task WHERE WhatId = :accountId] > 3) {
-            return false;
-        } else {
-            return true;
-        }
-
-    }
 
     private static Task generateNewTask(AccountToTask accountToTask) {
         Task newTask = new Task();
